[tool.poetry]
name = "dash-hot-reload-repro"
version = "0.1.0"
description = ""
authors = ["Uri Goldstein <uri.goldstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.2.0"
waitress = "^2.0.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
